# stm32g030-rtic

./: .gitignore  README.md
firmware/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: lib.rs  main.rs
firmware/tests/: integration.rs
